vlib/v/parser/tests/map_syntax_err.vv
fn main() {
	m := map{"aaa": 1}
	println(m)
}
